@@ -2,12 +2,17 @@
 
 . ./test_vars
 
+# Set the 'internal field separator' character to
+# something besides whitespace so that the string
+# comparisons will work
+IFS="~"
+
 ##################
 # stdout output
 ##################
-suite_output="Running suite(s): S1
+suite_output=`printf "Running suite(s): S1
  S2
- XML escape \" ' < > & tests"
+ XML escape \" ' < > & \x9 \x0AX\x08 tests"`
 
 exp_silent=""
 
@@ -20,25 +25,25 @@ exp_minimal="$suite_output
 $exp_minimal_result"
 
 if [ $HAVE_FORK -eq 1 ]; then
-exp_normal_result="37%: Checks: 8, Failures: 4, Errors: 1
+exp_normal_result=`printf "37%%: Checks: 8, Failures: 4, Errors: 1
 ${SRCDIR}ex_output.c:37:F:Core:test_fail:0: Failure
 ${SRCDIR}ex_output.c:46:E:Core:test_exit:0: (after this point) Early exit with return value 1
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:0: Iteration 0 failed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:2: Iteration 2 failed
-${SRCDIR}ex_output.c:78:F:description \" ' < > &:test_xml_esc_fail_msg:0: fail \" ' < > & message"
+${SRCDIR}ex_output.c:78:F:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg:0: fail \" ' < > & \x9 \x0AX\x08 message"`
 else
-exp_normal_result="42%: Checks: 7, Failures: 4, Errors: 0
+exp_normal_result=`printf "42%%: Checks: 7, Failures: 4, Errors: 0
 ${SRCDIR}ex_output.c:37:F:Core:test_fail:0: Failure
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:0: Iteration 0 failed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:2: Iteration 2 failed
-${SRCDIR}ex_output.c:78:F:description \" ' < > &:test_xml_esc_fail_msg:0: fail \" ' < > & message"
+${SRCDIR}ex_output.c:78:F:description \" ' < > &\x9 \xA end:test_xml_esc_fail_msg:0: fail \" ' < > & \x9 \x0AX\x08 message"`
 fi
 exp_normal="$suite_output
 $exp_normal_result"
 
 
 if [ $HAVE_FORK -eq 1 ]; then
-exp_verbose_result="37%: Checks: 8, Failures: 4, Errors: 1
+exp_verbose_result=`printf "37%%: Checks: 8, Failures: 4, Errors: 1
 ${SRCDIR}ex_output.c:31:P:Core:test_pass:0: Passed
 ${SRCDIR}ex_output.c:37:F:Core:test_fail:0: Failure
 ${SRCDIR}ex_output.c:46:E:Core:test_exit:0: (after this point) Early exit with return value 1
@@ -46,22 +51,22 @@ ${SRCDIR}ex_output.c:66:P:Core:test_pass2:0: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:0: Iteration 0 failed
 ${SRCDIR}ex_output.c:72:P:Core:test_loop:1: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:2: Iteration 2 failed
-${SRCDIR}ex_output.c:78:F:description \" ' < > &:test_xml_esc_fail_msg:0: fail \" ' < > & message"
+${SRCDIR}ex_output.c:78:F:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg:0: fail \" ' < > & \x9 \x0AX\x08 message"`
 else
-exp_verbose_result="42%: Checks: 7, Failures: 4, Errors: 0
+exp_verbose_result=`printf "42%%: Checks: 7, Failures: 4, Errors: 0
 ${SRCDIR}ex_output.c:31:P:Core:test_pass:0: Passed
 ${SRCDIR}ex_output.c:37:F:Core:test_fail:0: Failure
 ${SRCDIR}ex_output.c:66:P:Core:test_pass2:0: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:0: Iteration 0 failed
 ${SRCDIR}ex_output.c:72:P:Core:test_loop:1: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:2: Iteration 2 failed
-${SRCDIR}ex_output.c:78:F:description \" ' < > &:test_xml_esc_fail_msg:0: fail \" ' < > & message"
+${SRCDIR}ex_output.c:78:F:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg:0: fail \" ' < > & \x9 \x0AX\x08 message"`
 fi
 exp_verbose="$suite_output
 $exp_verbose_result"
 
 if [ $HAVE_FORK -eq 1 ]; then
-exp_subunit="test: Core:test_pass
+exp_subunit=`printf "test: Core:test_pass
 success: Core:test_pass
 test: Core:test_fail
 failure: Core:test_fail [
@@ -83,12 +88,12 @@ test: Core:test_loop
 failure: Core:test_loop [
 ${SRCDIR}ex_output.c:72: Iteration 2 failed
 ]
-test: description \" ' < > &:test_xml_esc_fail_msg
-failure: description \" ' < > &:test_xml_esc_fail_msg [
-${SRCDIR}ex_output.c:78: fail \" ' < > & message
-]"
+test: description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg
+failure: description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg [
+${SRCDIR}ex_output.c:78: fail \" ' < > & \x9 \x0AX\x08 message
+]"`
 else
-exp_subunit="test: Core:test_pass
+exp_subunit=`printf "test: Core:test_pass
 success: Core:test_pass
 test: Core:test_fail
 failure: Core:test_fail [
@@ -106,17 +111,17 @@ test: Core:test_loop
 failure: Core:test_loop [
 ${SRCDIR}ex_output.c:72: Iteration 2 failed
 ]
-test: description \" ' < > &:test_xml_esc_fail_msg
-failure: description \" ' < > &:test_xml_esc_fail_msg [
-${SRCDIR}ex_output.c:78: fail \" ' < > & message
-]"
+test: description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg
+failure: description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg [
+${SRCDIR}ex_output.c:78: fail \" ' < > & \x9 \x0AX\x08 message
+]"`
 fi
 
 ##################
 # log output
 ##################
 if [ $HAVE_FORK -eq 1 ]; then
-expected_log_log="Running suite S1
+expected_log_log=`printf "Running suite S1
 ${SRCDIR}ex_output.c:31:P:Core:test_pass:0: Passed
 ${SRCDIR}ex_output.c:37:F:Core:test_fail:0: Failure
 ${SRCDIR}ex_output.c:46:E:Core:test_exit:0: (after this point) Early exit with return value 1
@@ -125,12 +130,12 @@ ${SRCDIR}ex_output.c:66:P:Core:test_pass2:0: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:0: Iteration 0 failed
 ${SRCDIR}ex_output.c:72:P:Core:test_loop:1: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:2: Iteration 2 failed
-Running suite XML escape \" ' < > & tests
-${SRCDIR}ex_output.c:78:F:description \" ' < > &:test_xml_esc_fail_msg:0: fail \" ' < > & message
+Running suite XML escape \" ' < > & \x9 \x0AX\x08 tests
+${SRCDIR}ex_output.c:78:F:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg:0: fail \" ' < > & \x9 \x0AX\x08 message
 Results for all suites run:
-37%: Checks: 8, Failures: 4, Errors: 1"
+37%%: Checks: 8, Failures: 4, Errors: 1"`
 else
-expected_log_log="Running suite S1
+expected_log_log=`printf "Running suite S1
 ${SRCDIR}ex_output.c:31:P:Core:test_pass:0: Passed
 ${SRCDIR}ex_output.c:37:F:Core:test_fail:0: Failure
 Running suite S2
@@ -138,10 +143,10 @@ ${SRCDIR}ex_output.c:66:P:Core:test_pass2:0: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:0: Iteration 0 failed
 ${SRCDIR}ex_output.c:72:P:Core:test_loop:1: Passed
 ${SRCDIR}ex_output.c:72:F:Core:test_loop:2: Iteration 2 failed
-Running suite XML escape \" ' < > & tests
-${SRCDIR}ex_output.c:78:F:description \" ' < > &:test_xml_esc_fail_msg:0: fail \" ' < > & message
+Running suite XML escape \" ' < > & \x9 \x0AX\x08 tests
+${SRCDIR}ex_output.c:78:F:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg:0: fail \" ' < > & \x9 \x0AX\x08 message
 Results for all suites run:
-42%: Checks: 7, Failures: 4, Errors: 0"
+42%%: Checks: 7, Failures: 4, Errors: 0"`
 fi
 
 ##################
@@ -207,19 +212,19 @@ expected_xml="<?xml version=\"1.0\"?>
     </test>
   </suite>
   <suite>
-    <title>XML escape &quot; &apos; &lt; &gt; &amp; tests</title>
+    <title>XML escape &quot; &apos; &lt; &gt; &amp; &#x9; &#xA;X tests</title>
     <test result=\"failure\">
       <fn>ex_output.c:78</fn>
       <id>test_xml_esc_fail_msg</id>
       <iteration>0</iteration>
-      <description>description &quot; &apos; &lt; &gt; &amp;</description>
-      <message>fail &quot; &apos; &lt; &gt; &amp; message</message>
+      <description>description &quot; &apos; &lt; &gt; &amp; &#x9; &#xA;X end</description>
+      <message>fail &quot; &apos; &lt; &gt; &amp; &#x9; &#xA;X message</message>
     </test>
   </suite>
 </testsuites>"
 expected_duration_count=9
 else
-expected_xml="<?xml version=\"1.0\"?>
+expected_xml="<?xml version=\"1.0\" encoding=\"UTF-8\"?>
 <?xml-stylesheet type=\"text/xsl\" href=\"http://check.sourceforge.net/xml/check_unittest.xslt\"?>
 <testsuites xmlns=\"http://check.sourceforge.net/ns\">
   <suite>
@@ -271,13 +276,13 @@ expected_xml="<?xml version=\"1.0\"?>
     </test>
   </suite>
   <suite>
-    <title>XML escape &quot; &apos; &lt; &gt; &amp; tests</title>
+    <title>XML escape &quot; &apos; &lt; &gt; &amp; &#x9; &#xA;X tests</title>
     <test result=\"failure\">
       <fn>ex_output.c:78</fn>
       <id>test_xml_esc_fail_msg</id>
       <iteration>0</iteration>
-      <description>description &quot; &apos; &lt; &gt; &amp;</description>
-      <message>fail &quot; &apos; &lt; &gt; &amp; message</message>
+      <description>description &quot; &apos; &lt; &gt; &amp; &#x9; &#xA;X end</description>
+      <message>fail &quot; &apos; &lt; &gt; &amp; &#x9; &#xA;X message</message>
     </test>
   </suite>
 </testsuites>"
@@ -288,16 +293,16 @@ fi
 # tap output
 ##################
 if [ $HAVE_FORK -eq 1 ]; then
-expected_normal_tap="ok 1 - ${SRCDIR}ex_output.c:Core:test_pass: Passed
+expected_normal_tap=`printf "ok 1 - ${SRCDIR}ex_output.c:Core:test_pass: Passed
 not ok 2 - ${SRCDIR}ex_output.c:Core:test_fail: Failure
 not ok 3 - ${SRCDIR}ex_output.c:Core:test_exit: Early exit with return value 1
 ok 4 - ${SRCDIR}ex_output.c:Core:test_pass2: Passed
 not ok 5 - ${SRCDIR}ex_output.c:Core:test_loop: Iteration 0 failed
 ok 6 - ${SRCDIR}ex_output.c:Core:test_loop: Passed
 not ok 7 - ${SRCDIR}ex_output.c:Core:test_loop: Iteration 2 failed
-not ok 8 - ${SRCDIR}ex_output.c:description \" ' < > &:test_xml_esc_fail_msg: fail \" ' < > & message
-1..8"
-expected_aborted_tap="ok 1 - ${SRCDIR}ex_output.c:Core:test_pass: Passed
+not ok 8 - ${SRCDIR}ex_output.c:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg: fail \" ' < > & \x9 \x0AX\x08 message
+1..8"`
+expected_aborted_tap=`printf "ok 1 - ${SRCDIR}ex_output.c:Core:test_pass: Passed
 not ok 2 - ${SRCDIR}ex_output.c:Core:test_fail: Failure
 not ok 3 - ${SRCDIR}ex_output.c:Core:test_exit: Early exit with return value 1
 not ok 4 - ${SRCDIR}ex_output.c:Core:test_abort: Early exit with return value 1
@@ -305,17 +310,17 @@ ok 5 - ${SRCDIR}ex_output.c:Core:test_pass2: Passed
 not ok 6 - ${SRCDIR}ex_output.c:Core:test_loop: Iteration 0 failed
 ok 7 - ${SRCDIR}ex_output.c:Core:test_loop: Passed
 not ok 8 - ${SRCDIR}ex_output.c:Core:test_loop: Iteration 2 failed
-not ok 9 - ${SRCDIR}ex_output.c:description \" ' < > &:test_xml_esc_fail_msg: fail \" ' < > & message
-1..9"
+not ok 9 - ${SRCDIR}ex_output.c:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg: fail \" ' < > & \x9 \x0AX\x08 message
+1..9"`
 else
-expected_normal_tap="ok 1 - ${SRCDIR}ex_output.c:Core:test_pass: Passed
+expected_normal_tap=`printf "ok 1 - ${SRCDIR}ex_output.c:Core:test_pass: Passed
 not ok 2 - ${SRCDIR}ex_output.c:Core:test_fail: Failure
 ok 3 - ${SRCDIR}ex_output.c:Core:test_pass2: Passed
 not ok 4 - ${SRCDIR}ex_output.c:Core:test_loop: Iteration 0 failed
 ok 5 - ${SRCDIR}ex_output.c:Core:test_loop: Passed
 not ok 6 - ${SRCDIR}ex_output.c:Core:test_loop: Iteration 2 failed
-not ok 7 - ${SRCDIR}ex_output.c:description \" ' < > &:test_xml_esc_fail_msg: fail \" ' < > & message
-1..7"
+not ok 7 - ${SRCDIR}ex_output.c:description \" ' < > & \x9 \x0AX\x08 end:test_xml_esc_fail_msg: fail \" ' < > & \x9 \x0AX\x08 message
+1..7"`
 # When fork() is unavailable, one of the tests
 # will invoke exit() which will terminate the
 # unit testing program. In that case, the tap
